# dotfiles

./: .dotfiles-env  .editorconfig  .env  .gitignore  .luarc.json  .shellcheckrc  Pipfile  README.md  aesthetics.sh  anacron.sh  android.sh  applications-user.sh  applications.sh  bin-symlinks.sh  bot.sh  certbot.sh  config-root.yaml  config-user.yaml  config.yaml  custom-commands.sh  devbox.json  dotdrop.sh  grub.sh  install.sh  languages.sh  locales.sh  manually.sh  menu.sh  network.sh  polkit.sh  pyproject.toml  raspberry-setup.sh  script-symlinks.sh  set-startup.sh  setup.sh  shell-env.sh  shell.sh  ssh-keys.sh  terminal-colors.sh  terminal-setup.sh  (+3 more)
.zed/: settings.json
Support/: .bash_profile  rsyslog-custom.conf  xfce-applications.menu  xfsettings.json  xfsettings.xfconf
actions/: anacron.sh  asdf.sh  autorandr.sh  bash.sh  i3.sh  lang-versions.sh  locales.sh  packages.sh  repo-keys.sh  sh.sh  zsh.zsh
actions.d/: append.yaml  insert.yaml  shared.yaml
bot-steps/: aesthetics.sh  dependencies.sh  dotdrop.sh  environment.sh  flatpak.sh  graphical-login.sh  hardware.sh  i3.sh  lib.sh  manually.sh  network.sh  remote-access.sh  repos.sh  security.sh  shell.sh  startup.sh  sway.sh  timers.sh  users.sh  xfce.sh
custom-commands/: README.md  install.sh
docs/: wrap-bot-lines.sh
dotdrop-actions/: asdf.sh  sh.sh  zsh.sh  zsh.zsh
dotfiles/: .env  .gitignore  Pipfile  (+15 more)
dotfiles-user/: gitconfig  zshenv
dotfiles/dotfiles/usr/local/lib/i3ipc-extras/: pyproject.toml
dotfiles/dotfiles/usr/local/lib/i3ipc-extras/src/i3ipc_extras/: ConnectionExtras.py  __init__.py
(+1255 files in other folders)
